fix spacing issues on tactics.html and planning.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,6 +576,7 @@ div.desc {
     width: 250px;
     height: 130px;
     margin: 0 auto;
+    margin-bottom: 25px;
     padding: 20px;
     padding-bottom: 25px;
     background-color: rgba(221, 226, 198, 0.5);
@@ -605,7 +606,7 @@ div.desc {
 
 .tactics-text-container {
     margin: 0 auto;
-    margin-bottom: 120px;
+    margin-bottom: 50px;
     width: 66.66%;
     height: auto;
     padding-top: 50px;
